--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
+title: Caravel
+avatar: assets/img/triangle.png                         # Empty for no avatar in navbar
+favicon: assets/favicon.ico                             # Icon displayed in the tab
+
+header_feature_image: assets/img/pexels/triangular.jpeg
+
 remote-theme: Sylhare/Type-on-Strap
