--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ favicon: assets/favicon.ico                             # Icon displayed in the 
 
 header_feature_image: assets/img/pexels/triangular.jpeg
 
-remote-theme: Sylhare/Type-on-Strap
+remote_theme: sylhare/Type-on-Strap
