--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,28 @@ title: Caravel
 bootwatch: paper
 
 remote_theme: aksakalli/jekyll-doc-theme@gh-pages
+
+defaults:
+- scope:
+    path: _posts
+    type: posts
+  values:
+    layout: post
+    sectionid: blog
+
+- scope:
+    path: _docs
+    type: docs
+  values:
+    layout: docs
+    sectionid: docs
+    seo:
+      type: "WebPage"
+
+collections:
+  docs:
+    permalink: /:collection/:path/
+    output: true
+  posts:
+    permalink: /blog/:year/:month/:day/:title/
+    output: true
