--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -1,11 +1,6 @@
-- title: Getting Started
+- title: About Us
   docs:
   - home
-  - themes
-  - customization
-
-- title: Examples
-  docs:
-  - cheatsheet
-  - font-awesome
-  - bootstrap
+  - goals
+  - team
+  - sponsors
